# Emblinkenator

./: .gitignore  Cargo.toml  LICENSE  README.md  sonar-project.properties  startup-config.json.example
emblinkenator/: .gitignore  Cargo.toml  clippy.toml  startup_config.json.example
emblinkenator/src/: config.rs  event_loop.rs  events.rs  frame.rs  frame_resolver.rs  id.rs  led.rs  main.rs  opqueue.rs  state.rs
emblinkenator/src/animation/: factory.rs  manager.rs  mod.rs
emblinkenator/src/auxiliary_data/: manager.rs  mod.rs
emblinkenator/src/devices/: manager.rs  mod.rs  mqtt.rs  threaded_device.rs  udp.rs
emblinkenator/src/devices/auxiliary_data/: mod.rs  noise.rs
emblinkenator/src/devices/led_output/: mod.rs  mqtt.rs  udp.rs
emblinkenator/src/pipeline/: compute_device.rs  mod.rs
emblinkenator/src/world/: context.rs  fixture.rs  group.rs  installation.rs  mod.rs
examples/hardware/NodeMCU/MQTT/: MQTT.ino  Settings.h.sample
examples/hardware/NodeMCU/UDP/: Settings.h.sample  UDP.ino
pipeline/: Cargo.toml
protected-id-derive/: Cargo.toml  README.md
protected-id-derive/src/: lib.rs
shaders/: colourfade.json  colourfade.wgsl  random.json  random.wgsl  test.json  test.wgsl
